3/17/19
    - Added in more sounds that you wanted in.

3/14/19
    - Hidden boxes and hitboxes are more accurate and include more objects now.
    - Basic workings of pathfinding added back in from Ape. Some things are missing but more to come.

3/13/19
    - Gob tooltips when hovering over them will now show what GobID they are holding or being held by
    - custom cave icon pushed now so caves show again on the map

3/12/19
    - Auto aggro keybinds will turn off aggro icon automatically now
    - Misc bug fix

3/11/19
    - Small change to markers for caves

3/10/19
    - Small fix to window drawing
    - Ability to delete loftar map grids in case you have screwed up ones. Alt + Right click will delete it. Go out of
    distance and then back in to make it update. Zoom maps won't update right away.
    - Added in option to drop items while over water only when holding ctrl. It can be toggled under Options -> Gameplay.
    By default it's on
    - Added keybind for picking up the closest forage item. This also include small animals when you have the option
    toggled (on by default, Options -> Gameplay). Small animals include: cavemoth, rat, centipedes, hedgehogs, jellyfish,
    squirrel, snail, irrbloss, and bats
    - Added keybind for promixity aggroing or animals and players. C-F and C-D by default. The aggroing of players only
    works if they are unkinned or a bad kin color.
    - Added the speed cycle keybind as C-R like default
    - Added keybinds for switching between hotbar pages. By default only the number hotbar is defined as Alt-1 through
    Alt-5. The rest are left undefined.
    - You can now undefine keybinds if you don't want them by ctrl+right clicking their black box in the Keybind settings.
    - Alt + Right click now doesn't drop items that were locked..
    - Added lock button to hotbars. When on it'll be light up yellowish and will prevent you from dragging buttons or