@@ -32,7 +32,7 @@ import haven.MapMesh.Scan;
 import haven.Surface.Vertex;
 
 public class CaveTile extends Tiler {
-    public static final float h = 16;
+    public static final float h = 7f;
     public final Material wtex;
     public final Tiler ground;
 
@@ -51,15 +51,9 @@ public class CaveTile extends Tiler {
 
 	public Vertex[] fortile(Coord tc) {
 	    if(wv[cs.o(tc)] == null) {
-		Random rnd = m.grnd(tc.add(m.ul));
-		Vertex[] buf = wv[cs.o(tc)] = new Vertex[4];
-		buf[0] = ms.new Vertex(ms.fortile(tc));
-		for(int i = 1; i < buf.length; i++) {
-		    buf[i] = ms.new Vertex(buf[0].x, buf[0].y, buf[0].z + (i * h / (buf.length - 1)));
-		    buf[i].x += (rnd.nextFloat() - 0.5f) * 3.0f;
-		    buf[i].y += (rnd.nextFloat() - 0.5f) * 3.0f;
-		    buf[i].z += (rnd.nextFloat() - 0.5f) * 3.5f;
-		}
+		Vertex[] buf = wv[cs.o(tc)] = new Vertex[2];
+		buf[0] = ms.fortile(tc);
+		buf[1] = ms.new Vertex(buf[0].x, buf[0].y, buf[0].z + h);
 	    }
 	    return(wv[cs.o(tc)]);
 	}
@@ -82,11 +76,11 @@ public class CaveTile extends Tiler {
 		    ground = ts.tfac().create(id, ts);
 		}
 	    }
-	    return(new CaveTile(id, set, wtex, ground));
+	    return(new CaveTile(id, wtex, ground));
 	}
     }
 
-    public CaveTile(int id, Tileset set, Material wtex, Tiler ground) {
+    public CaveTile(int id, Material wtex, Tiler ground) {
 	super(id);
 	this.wtex = wtex;
 	this.ground = ground;
